# flight-software

./: .gitignore  .project  CMakeLists.txt  Doxyfile  LICENSE  README.md  doxygen.cfg
Archive/: README.md
Archive/MainMCU/Core/Include/: controls.h  protocol.h  state.h  static_fire.h
Archive/MainMCU/Core/Src/: adc_isr.c  crc_hash.c  packet_encode.c  run_controls.c  state_flash.c  uart_isr.c
Archive/MainMCU/Nucleo-F429ZI/: .mxproject
Archive/MainMCU/Nucleo-H723ZG/: h723.ioc
Archive/StateEstimation/: Makefile  STM32Make.make
Archive/StateEstimation/Core/Src/: stm32h7xx_it.c
Core/: ring_buffer.c
Core/Inc/: ipc.h
Core/Src/: ipc.c
Drivers/include/: flash_chip.h
Drivers/source/: w25q_flash_chip.c
Extensions/: CMakeLists.txt
Extensions/fatfs/: user_diskio.c  user_diskio.h
Extensions/fatfs/src/: ff_gen_drv.c
FreeRTOS-Kernel/: CMakeLists.txt
HALAL/: README.md
HALAL/Inc/: adc.h  barometer.h  debug.h  flash_chip.h  halal.h  imu.h  magnetometer.h  radio.h  rcc.h  state_estimation.h  storage.h  timebase.h
HALAL/Src/: hal_timebase.c  halal.c
HALAL/Src/ADIS16500/: ADIS16500.c
HALAL/Src/Adc/: adc_internal.c  adc_internal.h  adc_jet_vanes.c
HALAL/Src/Barometer/: bmp280.c  fake_barometer.c  ms5607.c
HALAL/Src/Debug/: debug_uart.c
HALAL/Src/FlashChip/: fake_flash_chip.c  w25q.c
HALAL/Src/Isr/: adc_isr.c  adc_isr.h  tim_isr.c  tim_isr.h  uart_isr.c  uart_isr.h
HALAL/Src/Magnetometer/: lis3mdl.c  magnetometer.c
HALAL/Src/Radio/: radio_uart.c
HALAL/Src/Rcc/: rcc_nucleo_f429zi.c  rcc_nucleo_h723zg.c
HALAL/Src/StateEstimation/: state_estimation_uart.c
HALAL/Src/Storage/: storage_sd_spi.c  storage_sd_spi.h  storage_usb.c  usbh_diskio.c
HALAL/Src/Timebase/: timebase_tim.c
MCU-h725zgt6/: MCU-h725zgt6.ioc
MainMCU/: .mxproject  H745.ioc  README.md  make.bat
MainMCU/CM4/Core/Inc/: FreeRTOSConfig.h  main.h  stm32h7xx_hal_conf.h  telemetry.h  uart.h
MainMCU/CM4/Core/Src/: main.c  stm32h7xx_hal_msp.c  telemetry.c  uart.c
MainMCU/CM7/Core/Inc/: FreeRTOSConfig.h  pid.h  stm32h7xx_hal_conf.h
MainMCU/CM7/Core/Src/: main.c  pid.c  stm32h7xx_hal_msp.c
MainMCU/Common/Inc/: common.h  controls.h  ringbuff.h
MainMCU/Common/Src/: controls.c  lqr_gains_data.c  reference_state_data.c  ringbuff.c
MainMCU/Core/FreeRTOS-Kernel/: stream_buffer.c
MainMCU/Core/Include/: FreeRTOSConfig.h  adc.h  crc_hash.h  globals.h  master_task.h  packet_encode.h  periph_io.h  port_layer.h  protocol.h  rocket_pid.h  sdio.h  servo.h  state.h  state_est_rx.h  state_flash.h  state_rx.h  state_tx.h  static_fire.h  telemetry.h  telemetry_rx.h  telemetry_task.h  transmission_manager.h  uart_isr.h  utils.h
MainMCU/Core/Src/: adc.c  adc_convert.c  adc_isr.c  controls.c  crc_hash.c  master_task.c  packet_encode.c  periph_io.c  port_layer.c  protocol.c  rocket_pid.c  run_controls.c  sdio.c  servo.c  state_est_rx.c  state_flash.c  state_rx.c  state_tx.c  static_fire.c  telemetry.c  telemetry_rx.c  telemetry_task.c  transmission_manager.c  uart_isr.c  utils.c  w25q.c  w25q_impl.c
MainMCU/Core/Src/main/: rocket_pid.c  rocket_pid.h
MainMCU/Core/Src/scripts/: generate_tests.py  test_pid.c
MainMCU/Core/Tests/Include/: blink.h  sd_test.h  state_test.h  telemetry_test.h  tests.h
MainMCU/Core/Tests/Src/: blink.c  flash_test.c  sd_test.c  state_test.c  telemetry_test.c  uart_test.c
MainMCU/Drivers/Hardware/Inc/: W25Qxx.h  XbeeInit.h  servo.h
MainMCU/Drivers/Hardware/Src/: W25Qxx.c  XbeeInit.c  servo.c
MainMCU/MCU-h725zgt6/: .mxproject  .stm32env  MCU-h725zgt6.ioc  Makefile  STM32H725ZGTx_FLASH.ld
MainMCU/Makefile/CM4/: Makefile
MainMCU/Makefile/CM7/: Makefile
MainMCU/Nucleo-F429ZI/: .mxproject  Makefile  Nucleo-F429ZI.ioc
MainMCU/Nucleo-H723ZG/: .mxproject  Makefile
MainMCU/Nucleo-H723ZI/: Makefile  h723.ioc
Mocks/test/mocks/: CMakeLists.txt  Mockcommands.c  Mockcommands.h  Mockfatfs_sd.c  Mockfatfs_sd.h
RocketLib/: CMakeLists.txt  README.md
RocketLib/Controls/Inc/: controls.h  lqr.h
RocketLib/Controls/Src/: controls.c  lqr.c
RocketLib/FatFs/src/: fatfs.c  fatfs.h  fatfs_sd.c  ff_gen_drv.c  ffconf.h  integer.h  sd_diskio.c  sd_diskio.h  usbh_diskio.c  usbh_diskio.h
RocketLib/Telemetry/Inc/: protocol.h  telemetry.h
RocketLib/Telemetry/Src/: protocol.c  telemetry.c
RocketLib/Utils/Inc/: fs_wrapper.h  log.h  periph_io.h  protocol.h  util.h  w25q.h
RocketLib/Utils/Src/: fs_wrapper.c  log.c  periph_io.c  protocol.c  util.c
RocketLib/core/: rocketlib.c  rocketlib.h
RocketLib/utilities/: utils.h
Rockets/: README.md
Rockets/Example/Inc/: commands.h  lib.h  rocket.h
Rockets/Example/Src/: commands.c  lib.c  rocket.c
Rockets/Inc/: commands.h  lib.h  rocket.h
Rockets/JetVanes/Inc/: jet_vanes.h  lib.h
Rockets/JetVanes/Src/: commands.c  jet_vanes.c  lib.c  rocket.c
Rockets/TVC/Src/: rocket.c
Rockets/Testbed/src/: rocket.c
StateEstimation/: .gitignore  .mxproject  .stm32env  H723.ioc  Makefile  STM32-for-VSCode.config.yaml  STM32H723VETx_FLASH.ld  STM32H723XX_FLASH.ld  STM32Make.make  stm32h723vetx_flash.ld
StateEstimation/Core/Inc/: attitude.h  data_handling.h  ekf.h  main.h  state_est_helpers.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
StateEstimation/Core/Src/: attitude.c  data_handling.c  ekf.c  main.c  old_main.c  state_est_helpers.c  state_estimation.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c  testing.c
Targets/: CMakeLists.txt  README.md
Targets/Inc/: target.h
Targets/MCU-h725zgt6/: Makefile
Targets/MCU-h725zgt6/cmake/: gcc-arm-none-eabi.cmake
Targets/Nucleo-F429/Inc/: hal_modules.h  port.h  target_config.h
Targets/Nucleo-F429ZI/: Makefile  Nucleo-F429ZI.ioc  openocd.cfg
Targets/Nucleo-F429ZI/cmake/: gcc-arm-none-eabi.cmake
Targets/Nucleo-F429ZI/cmake/stm32cubemx/: CMakeLists.txt
Targets/Nucleo-H723ZG/: CMakeLists.txt  h723.ioc
Targets/Nucleo-H723ZG/cmake/: gcc-arm-none-eabi.cmake
Tasks/: README.md
Tasks/Inc/: init_tasks.h  rtos_globals.h  state_flash.h  state_tx.h  telemetry_rx.h
Tasks/Src/: init_tasks.c  state_flash.c  state_tx.c  telemetry_rx.c
Tools/: README.md
tools/: fix_autogen.py
(+154 files in other folders)
